--- a/env.toml
+++ b/env.toml
@@ -1,20 +1,18 @@
-port = 12000
-serverMode = "Loca7al"
-debugLevel = true
-errorLogFile = "error.log"
-
-serviceID = "test"
-providerID = "test"
-
+port = ":3000"
+server_mode = "Local"
+debug_level = true
+error_log_file = "error.log"
+service_id = "test"
+provider_id = "test"
 timezone = "Asia/Seoul"
 
 [referer]
-referer_domain = [
+referer_domains = [
     "http://localhost",
     "http:test.vehicle-monitoring.com"
 ]
 
-[rehectExtension]
+[reject_extension]
 compressed_file_extensions = [
     ".zip",
     ".tar.gz",
@@ -33,32 +31,30 @@ compressed_file_extensions = [
 
 [cors]
 methods = ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
-origins = ["ws://localhost:8081", "http://localhost:8081"]
-header = ["X-Requst-With", "Content-Type", "Cookie", "Authorization", "X-DEVICE-ID"]
+origins = ["ws://localhost:3000", "http://localhost:3000"]
+headers = ["X-Requst-With", "Content-Type", "Cookie", "Authorization", "X-DEVICE-ID"]
 
-[openAPICors]
-methods = ["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
-origins = ["*"]
-headers = ["X-Requestd-With", "Content-Type", "Cookie", "Authorization", "X-MAAS-API-KEY"]
-
-[serviceDB]
+[service_db]
 driver_name = "mysql"
-log_mod = true
-data_source_name = ""
+log_mode = true
+data_source_name = "root:root@tcp(localhost)/example?charset=utf8mb4&parseTime=True&loc=Local"
 root_source_name = ""
-max_idle_conns = ""
-max_open_conns = ""
+max_idle_conns = 10
+max_open_conns = 10
 
-[mongoDB]
-url = ""
-database = ""
+[body_log]
+enable_request_body = false
+enable_response_body = false
+
+#[openAPICors]
+#methods = ["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
+#origins = ["*"]
+#headers = ["X-Requestd-With", "Content-Type", "Cookie", "Authorization", "X-MAAS-API-KEY"]
+
+[mongo_db]
+url = "mongodb://root:root@localhost:27017"
+database = "mydb"
 
 [redis]
-authstore = ""
-authsotre_pwd = ""
-
-[BodyLog]
-enable_request_body = false
-enalbe_response_body = false
-
-
+auth_store = "localhost:6379"
+auth_sotre_pwd = ""
