--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,18 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
+# Custom
+
+.idea/.gitignore
+.idea/Test-vehicle-monitoring.iml
+.idea/git_toolbox_prj.xml
+.idea/modules.xml
+.idea/vcs.xml
+dockerfiles/mariadb/mariadb/
+dockerfiles/mogodb/mongodb/
+
+
+
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
