feat: OAuth2 로그인 기능

--- a/env.toml
+++ b/env.toml
@@ -58,3 +58,11 @@ database = "mydb"
 [redis]
 auth_store = "localhost:6379"
 auth_sotre_pwd = ""
+
+[google_oauth2]
+callback_url = "http://localhost:3000/api/nonauth/google/callback"
+oath_google_url_api = "https://www.googleapis.com/oauth2/v2/userinfo?access_token="
+scope_email = "https://www.googleapis.com/auth/userinfo.email"
+scope_profile = "https://www.googleapis.com/auth/userinfo.profile"
+client_id = "608883915789-gq7nob9m972bln17q99fj6tddqio5uiu.apps.googleusercontent.com"
+client_secret = "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"
