feat: jaeger 기능 추가

--- a/env.toml
+++ b/env.toml
@@ -66,3 +66,8 @@ scope_email = "https://www.googleapis.com/auth/userinfo.email"
 scope_profile = "https://www.googleapis.com/auth/userinfo.profile"
 client_id = "608883915789-gq7nob9m972bln17q99fj6tddqio5uiu.apps.googleusercontent.com"
 client_secret = "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"
+
+[trace]
+jaeger_agent_host = "localhost:6831"
+sampler_type = "const"
+sampler_param = 1
