--- a/dockerfiles/app/docker-compose.yml
+++ b/dockerfiles/app/docker-compose.yml
@@ -10,6 +10,65 @@ services:
       - app:app
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d
-    command: ['nginx', '-g', 'daemon off;']
+    command: [ 'nginx', '-g', 'daemon off;' ]
     ports:
       - 80:80
+
+  mariadb:
+      container_name: "mariadb"
+      image: mariadb:10
+      restart: always
+      ports:
+        - 3306:3306
+      environment:
+        MARIADB_ROOT_HOST: '%'
+        MARIADB_DATABASE: example
+        MARIADB_USER: root
+        MARIADB_PASSWORD: root
+        MARIADB_ROOT_PASSWORD: root
+
+  mongodb:
+    image: mongo:4.4.6
+    container_name: mongodb
+    ports:
+      - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+      - MONGO_INITDB_DATABASE=mydb
+
+  redis:
+    image: redis
+    command: redis-server --port 6379
+    container_name: redis_boot
+    hostname: redis_boot
+    labels:
+     - "name=redis"
+     - "mode=standalone"
+    ports:
+     - 6379:6379
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "6831:6831/udp"
+      - "16686:16686"
+    networks:
+      - jaeger-example
+  hotrod:
+    image: jaegertracing/example-hotrod:latest
+    ports:
+      - "8080:8080"
+    command: [ "all" ]
+    environment:
+      - JAEGER_AGENT_HOST=jaeger
+      # Note: if your application is using Node.js Jaeger Client, you need port 6832,
+      #       unless issue https://github.com/jaegertracing/jaeger/issues/1596 is resolved.
+      - JAEGER_AGENT_PORT=6831
+    networks:
+      - jaeger-example
+    depends_on:
+      - jaeger
+
+networks:
+  jaeger-example:
